--- a/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Win8/XPlatformCloudKit.Win8.csproj
+++ b/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Win8/XPlatformCloudKit.Win8.csproj
@@ -17,6 +17,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -148,7 +149,6 @@
     <None Include="XPlatformCloudKit.Win8_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Beige.jpg" />
     <Content Include="Assets\BrownBkgd.png" />
     <Content Include="Assets\Gray.jpg" />
     <Content Include="Assets\Logo.png" />
@@ -163,6 +163,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Package.StoreAssociation.xml" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
