Phone call button; added social network icons

--- a/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Win8/XPlatformCloudKit.Win8.csproj
+++ b/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Win8/XPlatformCloudKit.Win8.csproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\BrownBkgd.png" />
+    <Content Include="Assets\fb.png" />
     <Content Include="Assets\Gray.jpg" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\Mint.jpg" />
