--- a/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Phone8/XPlatformCloudKit.Phone8.csproj
+++ b/XPlatformCloudKit/XPlatformCloudKit/XPlatformCloudKit.Phone8/XPlatformCloudKit.Phone8.csproj
@@ -163,11 +163,11 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\24x24.png" />
     <Content Include="Assets\AlignmentGrid.png" />
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\fb.png" />
     <Content Include="Assets\Icons\Next.png" />
     <Content Include="Assets\Icons\Previous.png" />
     <Content Include="Assets\Icons\Reload.png" />
@@ -187,6 +187,7 @@
     <Content Include="Assets\Tiles\IconicTileSmall.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SplashScreenImage.jpg" />
     <Content Include="StoreLogo.png" />
   </ItemGroup>
   <ItemGroup>
